# epseon_backend

./: .clang-format  .clang-tidy  .cmake-format  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  README.md  build.py  mkdocs.yaml  pyproject.toml  workspace-dictionary.txt
.github/workflows/: build_n_deploy_docs.yaml  code_quality.yaml  release_to_test_pypi.yaml  type_checks.yaml  unit_tests.yaml
cpp/: CMakeLists.txt
cpp/cpu/: CMakeLists.txt
cpp/cpu/include/epseon_cpu/: libcpu.hpp
cpp/cpu/source/: libcpu.cpp
cpp/cpu/test/: test.cpp
cpp/gpu/: CMakeLists.txt
cpp/gpu/include/epseon/: vulkan_headers.hpp
cpp/gpu/include/epseon/gpu/: common.hpp  compute_context.hpp  device_interface.hpp  enums.hpp  libgpu.hpp  predecl.hpp  task_configurator.hpp  task_handle.hpp
cpp/gpu/include/epseon/gpu/algorithms/: algorithm.hpp  vibwa.hpp
cpp/gpu/include/epseon/gpu/compute/: allocation.hpp  buffer.hpp  environment.hpp  layout.hpp  predecl.hpp  resources.hpp  scaling.hpp  shader.hpp  spirv.hpp  structs.hpp  vma_raii.hpp
cpp/gpu/include/epseon/gpu/python/: api.hpp
cpp/gpu/include/epseon/gpu/task_configurator/: algorithm_config.hpp  hardware_config.hpp  potential_source.hpp  task_configurator.hpp
cpp/gpu/include/epseon_gpu/: compute_context.hpp  device_interface.hpp  enums.hpp  libgpu.hpp  python_api.hpp  task_configurator.hpp  task_handle.hpp  vulkan_application.hpp
cpp/gpu/include/epseon_gpu/algorithms/: algorithm.hpp  vibwa.hpp
cpp/gpu/include/epseon_gpu/python/: api.hpp
cpp/gpu/shaders/: .clang-tidy  CMakeLists.txt  main.c  main.comp  main.comp.spv  shader_defs.h
cpp/gpu/source/: common.cpp  compute_context.cpp  device_interface.cpp  enums.cpp  libgpu.cpp  python_api.cpp  vulkan_application.cpp
cpp/gpu/source/epseon/gpu/: common.cpp  compute_context.cpp  device_interface.cpp  enums.cpp  libgpu.cpp
cpp/gpu/source/epseon/gpu/python/: api.cpp
cpp/gpu/source/python/: api.cpp
cpp/gpu/test/: test.cpp  test_compute.cpp  test_compute_context.cpp  test_libgpu.cpp  test_task_configurator.cpp
cpp/gpu/test/task_configurator/: test_algorithm_confgu.cpp  test_hardware_config.cpp  test_potential_source.cpp  test_task_configurator.cpp
cpp/include/epseon/: libepseon.hpp
docs/: generate_reference_pages.py
docs/examples/: example.py
python/epseon_backend/: format.py
python/epseon_backend/device/: __init__.py
python/epseon_backend/device/cpu/: __init__.py  _libepseon_cpu.pyi
python/epseon_backend/device/gpu/: __init__.py  _libepseon_gpu.ipy  _libepseon_gpu.pyi
python/test/: ruff.toml  test_example.py  test_format.py
python/test/test_device/: __init__.py
python/test/test_device/test_cpu/: test_libepseon_cpu.py
python/test/test_device/test_gpu/: __init__.py  test_libepseon_gpu.py
